# CloudXR

./: .gitignore  settings.gradle
CloudVRLib/: build.gradle
CloudVRLib/src/main/: AndroidManifest.xml
CloudVRLib/src/main/cpp/: CMakeLists.txt  EGLHelper.cpp  EGLHelper.h  FpsCounter.h  GraphicRender.cpp  GraphicRender.h  log.h  main.cpp  matrix.h
CloudVRLib/src/main/cpp/nvidia/: AudioRender.cpp  AudioRender.h  CloudXR.cpp  CloudXR.h  SensorUtils.h
CloudVRLib/src/main/cpp/nvidia/cloudxr/include/: CloudXRClient.h  CloudXRClientOptions.h  CloudXRCommon.h  CloudXRInputEvents.h  CloudXROptionsParser.h
CloudVRLib/src/main/cpp/openxr/: OpenXR.cpp  OpenXR.h  common.h
CloudVRLib/src/main/cpp/openxr/openxr/include/openxr/: openxr.h  openxr_platform.h  openxr_reflection.h
CloudVRLib/src/main/java/com/ssnwt/cloudvr/: CloudVRActivity.java  CloudXR.java  SystemPropertyUtils.java
app/: build.gradle
app/libs/: libgsxrfe-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak  EGLHelper.cpp  EGLHelper.h  GraphicRender.cpp  GraphicRender.h  graphicsplugin_opengles.cpp  log.h  main.cpp
app/src/main/cpp/openxr/: check.h  common.h  geometry.h  gfxwrapper_opengl.c  gfxwrapper_opengl.h  graphicsplugin.h  graphicsplugin_opengles.cpp  logger.cpp  logger.h  nanoseconds.h  openxr_program.cpp  openxr_program.h  options.h  platformdata.h  platformplugin.h  platformplugin_android.cpp  xr_linear.h
app/src/main/cpp/openxr/include/openxr/: openxr_platform.h
cloudxr/: build.gradle
cloudxr/src/main/: AndroidManifest.xml
cloudxr/src/main/java/com/ssnwt/cloudxr/: MainActivity.java
cloudxr/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
